js/src/tests/test262/built-ins/NativeErrors/SyntaxError/prop-desc.js
verifyNotEnumerable
(
this
"
SyntaxError
"
)
;
verifyWritable
(
this
"
SyntaxError
"
)
;
verifyConfigurable
(
this
"
SyntaxError
"
)
;
reportCompare
(
0
0
)
;
